попытка отрисовать контент закладок в профиле услуги ++++

--- a/central-js/client/src/html/service/discussion.html
+++ b/central-js/client/src/html/service/discussion.html
@@ -1,3 +1,9 @@
-<div>
-    :
+<div class="list-group">
+	<div class="list-group-item">
+		<div class="row no-margin-bottom">
+			<div class="col-md-50">
+                            :
+			</div>
+		</div>
+	</div>
 </div>
