--- a/central-js/client/src/html/service/instruction.html
+++ b/central-js/client/src/html/service/instruction.html
@@ -1,10 +1,10 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div class="col-md-1" ng-if="serviсe.sInfo!=null">
-                            {{serviсe.sInfo}}
+			<div class="col-md-50" ng-if="sInfo!=null">
+                            {{sInfo}}
 			</div>
-			<div class="col-md-1" ng-if="serviсe.sInfo==null">
+			<div class="col-md-10" ng-if="sInfo==null">
                             Розділ у процесі наповнення
 			</div>
 		</div>
