--- a/central-js/client/src/html/service/legislation.html
+++ b/central-js/client/src/html/service/legislation.html
@@ -1,10 +1,10 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div class="col-md-1" ng-if="data.serviсe.sLaw!=null">
-                            {{data.serviсe.sLaw}}
+			<div class="col-md-50" ng-if="data.sLaw!=null">
+                            {{data.sLaw}}
 			</div>
-			<div class="col-md-1" ng-if="data.serviсe.sLaw==null">
+			<div class="col-md-10" ng-if="data.sLaw==null">
                             Розділ у процесі наповнення
 			</div>
 		</div>
