--- a/central-js/client/src/html/service/instruction.html
+++ b/central-js/client/src/html/service/instruction.html
@@ -1,11 +1,16 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div class="col-md-50" ng-if="sInfo!=null">
-                            {{sInfo}}
+			<div class="col-md-50" ng-if="service.sInfo!=null">
+                            {{service.sInfo}}
 			</div>
-			<div class="col-md-10" ng-if="sInfo==null">
+			<div class="col-md-10" ng-if="service.sInfo==null">
                             Розділ у процесі наповнення
+                            1{{service.sInfo}}
+                            2{{service.id}}
+                            3{{id}}
+                            4{{data.params.id}}
+                            5{{state.params.service.sInfo}}
 			</div>
 		</div>
 	</div>
