--- a/central-js/client/src/html/service/legislation.html
+++ b/central-js/client/src/html/service/legislation.html
@@ -1,11 +1,12 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div class="col-md-50" ng-if="data.sLaw!=null">
+			<div class="col-md-50" ng-if="service.sLaw!=null">
                             {{data.sLaw}}
 			</div>
-			<div class="col-md-10" ng-if="data.sLaw==null">
+			<div class="col-md-10" ng-if="service.sLaw==null">
                             Розділ у процесі наповнення
+                            {{data.sLaw}}
 			</div>
 		</div>
 	</div>
