--- a/central-js/client/src/html/service/questions.html
+++ b/central-js/client/src/html/service/questions.html
@@ -4,8 +4,9 @@
 			<div class="col-md-50" ng-if="serviсe.sFAQ!=null">
                             {{serviсe.sFAQ}}
 			</div>
-			<div class="col-md-10" ng-if="serviсe.sFAQ==null">
+			<div class="col-md-10" ng-if="service.sFAQ==null">
                             Розділ у процесі наповнення
+                            {{serviсe.sFAQ}}
 			</div>
 		</div>
 	</div>
