https://github.com/e-government-ua/i/issues/289 отрисовать контент закладок в профиле услуги

--- a/central-js/client/src/html/service/discussion.html
+++ b/central-js/client/src/html/service/discussion.html
@@ -1,7 +1,7 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div class="col-md-50">
+			<div style="margin:0px 10px 0px 10px" class="col-md-50">
                             :
 			</div>
 		</div>
