--- a/central-js/client/src/html/service/legislation.html
+++ b/central-js/client/src/html/service/legislation.html
@@ -1,12 +1,11 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div class="col-md-50" ng-if="service.sLaw!=null">
-                            {{data.sLaw}}
+			<div style="margin:0px 10px 0px 10px" class="col-md-50" ng-if="service.sLaw!=null">
+                            {{service.sLaw}}
 			</div>
 			<div class="col-md-10" ng-if="service.sLaw==null">
                             Розділ у процесі наповнення
-                            {{data.sLaw}}
 			</div>
 		</div>
 	</div>
