--- a/central-js/client/src/html/service/instruction.html
+++ b/central-js/client/src/html/service/instruction.html
@@ -1,10 +1,10 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div style="margin:0px 10px 0px 10px" class="col-md-50" ng-if="service.sInfo!=null">
+			<div style="margin:0px 10px 0px 10px" class="col-md-50" ng-if="service.sInfo.trim()!=''">
                             {{service.sInfo}}
 			</div>
-			<div class="col-md-10" ng-if="service.sInfo==null">
+			<div class="col-md-10" ng-if="service.sInfo.trim()==''">
                             Розділ у процесі наповнення
                             <!--1{{service.sInfo}}
                             2{{service.id}}
