--- a/central-js/client/src/html/service/questions.html
+++ b/central-js/client/src/html/service/questions.html
@@ -1,10 +1,10 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div style="margin:0px 10px 0px 10px" class="col-md-50" ng-if="service.sFAQ!=null">
+			<div style="margin:0px 10px 0px 10px" class="col-md-50" ng-if="service.sFAQ.trim()!=''">
                             {{service.sFAQ}}
 			</div>
-			<div class="col-md-10" ng-if="service.sFAQ==null">
+			<div class="col-md-10" ng-if="service.sFAQ.trim()==''">
                             Розділ у процесі наповнення
 			</div>
 		</div>
