fixing a tag for file downloading

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -66,7 +66,7 @@
                     <input type="hidden" value="{{doc.sName}}">
                 </td>
                 <td>
-                    <a href="/api/service/documents/download/{{doc.nID}}"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
+                    <a href="/api/service/documents/download/{{doc.nID}}" target="_blank"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
                     <a href="#accordion{{doc.nID}}" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
                 </td>
 
