add hypercomments integration on discussion page
note: widgetID is hardcoded for now

--- a/central-js/client/src/html/service/discussion.html
+++ b/central-js/client/src/html/service/discussion.html
@@ -1,8 +1,11 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
-			<div style="margin:0px 10px 0px 10px" class="col-md-50">
-                            :
+			<div class="col-md-5" style="margin: 0 10px 0 10px">
+				<div class="hypercomments-container">
+					<div id="hypercomments_widget"></div>
+					<a href="http://hypercomments.com" class="hc-link" title="comments widget">comments powered by HyperComments</a>
+				</div>
 			</div>
 		</div>
 	</div>
