#218 issue social buttons

--- a/central-js/client/src/html/service/city/absent.html
+++ b/central-js/client/src/html/service/city/absent.html
@@ -13,8 +13,9 @@
 				<div class="pluso"
 					 data-background="transparent"
 					 data-options="big,round,line,horizontal,nocounter,theme=04"
-					 data-title="Закликаю владу перевести цю послугу в електронну форму!"
-					 data-description="{{data.city.sName}} – {{service.sName}}"
+					 data-title="{{socialTitle}}"
+					 data-description="{{socialDescription}}"
+					 data-target=""
 					 data-services="facebook,vkontakte,twitter">
 				</div>
 			</li>
