--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -14,16 +14,20 @@
 			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
 				<h3>{{subcategory.sName}}</h3>
 				<ul class="list-unstyled">
-					<li ng-repeat="service in subcategory.aService | orderBy: '-nSub' | limitTo: limit as services">
+					<li ng-repeat="service in subcategory.aService | orderBy: '-nSub' | limitTo: limit">
 						<!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">({{service.nSub}}) {{service.sName}}</a-->
                                                 <!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>({{service.nSub}}) {{service.sName}}</a-->
                                                 <a ng-if="service.nSub>0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>{{service.sName}}</a>
                                                 <a ng-if="service.nSub==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">{{service.sName}}</a>
 					</li>
 				</ul>
+				<!--<p><a class="btn btn-default" href="#" role="button"-->
+					  <!--ng-hide="subcategory.aService.length <= 10 || services.length === subcategory.aService.length"-->
+					  <!--ng-click="limit = subcategory.aService.length">Всі послуги <span class="badge badge-info">{{ subcategory.aService.length }}</span></a></p>-->
 				<p><a class="btn btn-default" href="#" role="button"
-					  ng-hide="subcategory.aService.length <= 10 || services.length === subcategory.aService.length"
-					  ng-click="limit = subcategory.aService.length">Всі послуги <span class="badge badge-info">{{ subcategory.aService.length }}</span></a></p>
+                      ui-sref="subcategory({'catID': category.nID, 'scatID': subcategory.nID })"
+                      ng-hide="subcategory.aService.length <= limit"
+                      ng-href="/subcategory/{{category.nID}}/{{subcategory.nID}}">Всі послуги <span class="badge badge-info">{{ subcategory.aService.length }}</span></a></p>
 			</div>
 			<div class="col-md-12" ng-if="($index+1)%3 == 0" ng-repeat-end></div>
 		
