https://github.com/e-government-ua/i/issues/269 +

--- a/central-js/client/src/html/service/country/built-in/index.html
+++ b/central-js/client/src/html/service/country/built-in/index.html
@@ -1,3 +1,6 @@
+  <div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
+  <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div>
+
 <div class="list-group">
 	<div class="list-group-item">
 		<span>Крок 1. Увійдіть в систему через</span>
