--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -1,5 +1,5 @@
-  <div style="margin-top:20px; font-size:25px;">Отримоти послугу {{service.sName}}</div>
-  <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">Оператор {{service.sSubjectOperatorName}}</div>
+  <div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
+  <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div>
 
 <div class="list-group">
 	<div class="list-group-item" ng-class="{'disabled': data.city}">
