--- a/central-js/client/src/html/service/country/built-in/bankid.html
+++ b/central-js/client/src/html/service/country/built-in/bankid.html
@@ -1,3 +1,6 @@
+  <div style="margin-top:20px; font-size:25px;">{{service.sName}}</div>
+  <div style="margin-bottom:20px; font-size:18px;color:#cccccc;">{{service.sSubjectOperatorName}}</div>
+
 <div class="list-group">
 	<div class="list-group-item disabled">
 		<div class="row no-margin-bottom">
