Add admin buttons (itteration)

--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -8,18 +8,18 @@
            </div>
         </div>
     </div>
-        <button type="button" class="btn btn-default btn-lg ctrls-admin"><span class="glyphicon glyphicon-plus"></span> Додати категорію</button>
+        <a class="ctrls-admin ctrls-cat" href=""><span class="glyphicon glyphicon-plus"></span> Додати категорію</a>
 	<div class="row" ng-repeat="category in catalog">
             <h1 style="margin-bottom:-10px;margin-top:20px;">{{category.sName}}  <a class="ctrls-admin" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h1>
                         <button type="button" class="btn btn-default ctrls-admin"><span class="glyphicon glyphicon-plus"></span> Додати підкатегорію</button>
 			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
-				<h3>{{subcategory.sName}} <a class="ctrls-admin" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h3>
+				<h3>{{subcategory.sName}} <a class="ctrls-admin ctrls-subcat" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-subcat" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h3>
 				<ul class="list-unstyled">
 					<li ng-repeat="service in subcategory.aService | orderBy: '-nSub' | limitTo: limit as services">
 						<!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">({{service.nSub}}) {{service.sName}}</a-->
                                                 <!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>({{service.nSub}}) {{service.sName}}</a-->
-                                                <p><a ng-if="service.nSub>0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>{{service.sName}}</a>  <span class="glyphicons glyphicons-pencil serv-icon controls-andmin" ng-click=""></span>  <span class="glyphicons glyphicons-remove-2 serv-icon controls-andmin" ng-click=""></span></p>
-                                                <p><a ng-if="service.nSub==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">{{service.sName}}</a>  <span class="glyphicons glyphicons-pencil serv-icon controls-andmin" ng-click=""></span>  <span class="glyphicons glyphicons-remove-2 serv-icon controls-andmin" ng-click=""></span></p>
+                                                <p><a ng-if="service.nSub>0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу"><span class="glyphicon glyphicon-remove"></span></a></p>
+                                                <p><a ng-if="service.nSub==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу"><span class="glyphicon glyphicon-remove"></span></a></p>
 					</li>
 				</ul>                        
 				<!--<p><a class="btn btn-default" href="#" role="button"-->
