--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -10,8 +10,8 @@
     </div>
         <a class="ctrls-admin ctrls-cat" href=""><span class="glyphicon glyphicon-plus"></span> Додати категорію</a>
 	<div class="row" ng-repeat="category in catalog">
-            <h1 style="margin-bottom:-10px;margin-top:20px;">{{category.sName}}  <a class="ctrls-admin ctrls-cat" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h1>
-                        <a class="ctrls-admin ctrls-subcat" href=""><span class="glyphicon glyphicon-plus"></span> Додати підкатегорію</a>
+            <h1 style="margin-bottom:-10px;margin-top:20px;">{{category.sName}}  <a class="ctrls-admin ctrls-cat" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-cat" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h1>
+                        <a class="ctrls-admin ctrls-subcat" id="add0-subcat" href=""><span class="glyphicon glyphicon-plus"></span> Додати підкатегорію</a>
 			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
 				<h3>{{subcategory.sName}} <a class="ctrls-admin ctrls-subcat" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-subcat" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h3>
 				<a class="ctrls-admin ctrls-srvc" href=""><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
