Добавлена загрушка получения доступа к документу

--- a/central-js/client/src/html/documents/index.html
+++ b/central-js/client/src/html/documents/index.html
@@ -3,6 +3,7 @@
         <div class="col-md-12">
             <div ui-view="bankid"></div>
             <div ui-view="content"></div>
+            <div ui-view="view"></div>
         </div>
     </div>
 </div>
