--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -181,7 +181,7 @@
         <h3 class="modal-title">Доступ надано</h3>
     </div>
     <div class="modal-body">
-        Посилання: <b>{{url.value}}</b>
+        Посилання: <b>{{url}}</b>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary"
