--- a/central-js/client/src/html/service/city/absent.html
+++ b/central-js/client/src/html/service/city/absent.html
@@ -26,7 +26,9 @@
 </div>
 <div class="row">
 	<div class="col-md-12 text-center">
-		<input type="email" value="Ваш email"/>
-		<input type="button" value="Зберегти" />
+        <form name="absentMessageForm">
+            <input type="email" data-ng-model="absentMessage.email" value="Ваш email"/>
+            <input type="button" data-ng-click="sendAbsentMessage(absentMessage)" value="Зберегти" />
+        </form>
 	</div>
 </div>
