--- a/central-js/client/src/index.html
+++ b/central-js/client/src/index.html
@@ -7,6 +7,14 @@
 	<link href='//fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=cyrillic,cyrillic-ext,latin' rel='stylesheet' type='text/css'>
     <!-- build:style bundle -->
 	<!-- /build -->
+	<style>
+		.color-green {
+			color: green;
+		}
+		.color-red {
+			color: red;
+		}
+	</style>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
