--- a/central-js/client/src/index.html
+++ b/central-js/client/src/index.html
@@ -9,10 +9,13 @@
 	<!-- /build -->
 	<style>
 		.color-green {
-			color: green;
+			color: Green !important;
+		}
+		.active .color-green {
+			color: LightGreen !important;
 		}
 		.color-red {
-			color: red;
+			color: Red !important;
 		}
 	</style>
 	<script>
