Виправи свою фамілію та місце проживання.

--- a/central-js/client/src/html/about/index.html
+++ b/central-js/client/src/html/about/index.html
@@ -351,7 +351,7 @@
 					</td>
 					<td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
 						<p dir="ltr" style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;">
-							<span id="docs-internal-guid-549a812d-b410-4239-e9aa-2562c21c6525"><span style="font-size: 13px; font-family: Arial; color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Квасний Артур, Львов</span></span></p>
+							<span id="docs-internal-guid-549a812d-b410-4239-e9aa-2562c21c6525"><span style="font-size: 13px; font-family: Arial; color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Квасній Артур, Червоноград</span></span></p>
 					</td>
 					<td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
 						<p dir="ltr" style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;">
