--- a/central-js/client/src/html/service/country/built-in/bankid.html
+++ b/central-js/client/src/html/service/country/built-in/bankid.html
@@ -30,7 +30,7 @@
 						<div class="row">
 							<div class="col-md-5"></div>
 							<div class="col-md-3">
-								<button class="btn btn-info">Замовити довідку</button>
+								<button class="btn btn-info">Замовити послугу</button>
 							</div>
 							<div class="col-md-4"></div>
 						</div>
