--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -97,7 +97,7 @@
 							<div class="col-md-5"></div>
 							<div class="col-md-3">
 								<button class="btn btn-info" ng-click="submit(form)"
-									ng-disable="cantSubmit(form)">Замовити довідку</button>
+									ng-disable="cantSubmit(form)">Замовити послугу</button>
 							</div>
 							<div class="col-md-4"></div>
 						</div>
