--- a/central-js/client/src/html/service/country/link/index.html
+++ b/central-js/client/src/html/service/country/link/index.html
@@ -1,6 +1,6 @@
 <div class="list-group">
 	<div class="list-group-item disabled">
 		<span>Крок 1. Перейдіть за посиланням:</span>
-		<a ng-href="http://localhost/">{{service.sName}}</a>
+		<a ng-href="{{serviceData.sURL}}">{{service.sName}}</a>
 	</div>
 </div>
