--- a/central-js/client/src/html/service/city/link/index.html
+++ b/central-js/client/src/html/service/city/link/index.html
@@ -1,2 +1,2 @@
 <span>Крок 2. Перейдіть за посиланням:</span>
-<a ng-href="http://localhost/">{{service.sName}}</a>
+<a ng-href="{{serviceData.sURL}}">{{service.sName}}</a>
