--- a/central-js/client/src/html/service/region/link/index.html
+++ b/central-js/client/src/html/service/region/link/index.html
@@ -17,6 +17,6 @@
 	</div>
 	<div class="list-group-item disabled" ng-if="data.region">
 		<span>Крок 2. Перейдіть за посиланням:</span>
-		<a ng-href="http://localhost/">{{service.sName}}</a>
+		<a ng-href="{{serviceData.sURL}}">{{service.sName}}</a>
 	</div>
 </div>
