--- a/central-js/client/src/html/journal/content.html
+++ b/central-js/client/src/html/journal/content.html
@@ -2,6 +2,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h1>Мій журнал</h1>
+                                        <b style="color: red;">Сервіс в процесі реалізації!</b>
 				</div>
 				<div class="col-md-4 col-md-offset-4 text-right">
 					<div class="ord-inner-addon">
