--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-12">
 
-        <div class="notification-info">
+        <!--div class="notification-info">
             <div class="row">
                 <div class="col-md-10">
                     <p class="notification-header">
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div-->
 
     </div>
 </div>
