--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -65,6 +65,8 @@
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/angular-moment/angular-moment.js"></script>
       <script src="bower_components/ngstorage/ngStorage.js"></script>
+      <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+      <script src="bower_components/angular-ui/build/angular-ui.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/moment/locale/uk.js"></script>
@@ -78,6 +80,7 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/tasks/tasks.controller.js"></script>
+          <script src="app/tasks/tasks.file.directive.js"></script>
           <script src="app/tasks/tasks.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/base64.js"></script>
