--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -47,8 +47,7 @@
                     ng-required="item.required" ng-model="item.value"></select>
           </p>
           <p ng-if="item.type == 'file'">
-            <!--label>{{item.name}}</label--> 
-            <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{item.nFileIdx}}" target="_blank"><!-- <b>{{item.name}}</b> {{item.description}} --></a>
+            <file-field name="{{item.id}}" ng-model="item.value" ng-required="property.required">Add File</file-field>
           </p>
           <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
             <label>{{sFieldLabel(item.name)}}</label> <!-- {{item.type}} -->
