--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -10,7 +10,8 @@
     </div>
         <a class="ctrls-admin ctrls-cat add0-cat" href=""><span class="glyphicon glyphicon-plus"></span> Додати категорію</a>
 	<div class="row" ng-repeat="category in catalog">
-            <h1 style="margin-bottom:-10px;margin-top:10px;">{{category.sName}}  <a class="ctrls-admin ctrls-cat" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-cat" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h1>
+            <hr>
+            <h1 style="margin-bottom:0px;margin-top:20px;">{{category.sName}}  <a class="ctrls-admin ctrls-cat" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-cat" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h1>
             <p style="margin-bottom:-10px;margin-top:20px;margin-left:17px;"><a class="ctrls-admin ctrls-subcat add0-subcat" href=""><span class="glyphicon glyphicon-plus"></span> Додати підкатегорію</a></p>
 			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
 				<h3>{{subcategory.sName}} <a class="ctrls-admin ctrls-subcat" href="" title="Редагувати підкатегорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-subcat" href="" title="Видалити підкатегорію"><span class="glyphicon glyphicon-remove"></span></a></h3>
@@ -19,8 +20,8 @@
 					<li ng-repeat="service in subcategory.aService | orderBy: '-nSub' | limitTo: limit as services">
 						<!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">({{service.nSub}}) {{service.sName}}</a-->
                                                 <!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>({{service.nSub}}) {{service.sName}}</a-->
-                                                <p ng-if="service.nSub>0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу"><span class="glyphicon glyphicon-remove"></span></a></p>
-                                                <p ng-if="service.nSub==0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу"><span class="glyphicon glyphicon-remove"></span></a></p>
+                                                <p ng-if="service.nSub>0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on" title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу"><span class="glyphicon glyphicon-remove"></span></a></p>
+                                                <p ng-if="service.nSub==0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу"><span class="glyphicon glyphicon-remove"></span></a></p>
 					</li>
 				</ul>                        
 				<!--<p><a class="btn btn-default" href="#" role="button"-->
