--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -5,7 +5,7 @@
 	<div class="list-group-item" ng-class="{'disabled': data.city}">
 		<div class="row no-margin-bottom">
 			<div class="col-md-11 form-inline">
-				<span>Крок 1. Оберіть свій регіон </span>
+				<strong><span>Крок 1. Оберіть свій регіон </span></strong>
 				<div style="display:inline-block">
 					<span>Область</span>
 				</div>
