--- a/central-js/client/src/html/service/region/built-in/index.html
+++ b/central-js/client/src/html/service/region/built-in/index.html
@@ -2,7 +2,7 @@
 	<div class="list-group-item" ng-class="{'disabled': data.region}">
 		<div class="row no-margin-bottom">
 			<div class="col-md-11 form-inline">
-				<span>Крок 1. Оберіть свій регіон </span>
+				<strong><span>Крок 1. Оберіть свій регіон </span></strong>
 				<div style="display:inline-block">
 					<span>Область</span>
 					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in [data.region] track by region.nID" ng-disabled="data.region"></select>
