--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -10,7 +10,7 @@
     </div>
         <a class="ctrls-admin ctrls-cat add0-cat" href=""><span class="glyphicon glyphicon-plus"></span> Додати категорію</a>
 	<div class="row" ng-repeat="category in catalog">
-            <hr>
+            <hr ng-if="category.nID>1">
             <h1 style="margin-bottom:0px;margin-top:20px;">{{category.sName}}  <a class="ctrls-admin ctrls-cat" href="" title="Редагувати категорію"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-cat" href="" title="Видалити категорію"><span class="glyphicon glyphicon-remove"></span></a></h1>
             <p style="margin-bottom:-10px;margin-top:20px;margin-left:17px;"><a class="ctrls-admin ctrls-subcat add0-subcat" href=""><span class="glyphicon glyphicon-plus"></span> Додати підкатегорію</a></p>
 			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
