--- a/central-js/client/src/html/journal/content.html
+++ b/central-js/client/src/html/journal/content.html
@@ -16,7 +16,7 @@
         <div class="col-md-12">
             <table class="table" ng-init="limit = 7">
                 <tr data-ng-repeat="event in journal | limitTo: limit as results">
-                    <td>{{ event.sDate | date: 'mediumDate'}}</td>
+                    <td>{{ event.sDate | date: 'dd MMMM yyyy HH:mm'}}</td>
                     <td>{{ event.sEventName }}</td>
                 </tr>
             </table>
